--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,13 @@
       integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
       crossorigin=""
     />
+    <link rel="stylesheet" href="leaflet-routing-machine.css" />
 
     <title>Route App</title>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="leaflet-routing-machine.js"></script>
   </body>
 </html>
