Amend travis.yml and package.json

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
-    <script src="leaflet-routing-machine.js"></script>
+    <!-- <script src="leaflet-routing-machine.js"></script> -->
   </body>
 </html>
