--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,16 @@
     />
     <link rel="stylesheet" href="leaflet-routing-machine.css" />
 
+    <link
+      rel="stylesheet"
+      href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://rawgit.com/perliedman/leaflet-routing-machine/master/dist/leaflet-routing-machine.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+
     <title>Route App</title>
   </head>
   <body>
