Add css style sheet to index page and css file structure

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
       href="https://rawgit.com/perliedman/leaflet-routing-machine/master/dist/leaflet-routing-machine.css"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="../src/css/app.css" />
 
     <title>Route App</title>
   </head>
