--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -22,7 +23,7 @@
     />
     <link rel="stylesheet" href="../src/css/app.css" />
 
-    <title>Route App</title>
+    <title>There And Back</title>
   </head>
   <body>
     <div id="root"></div>
