--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
+    <link rel=”shortcut icon” href=”%PUBLIC_URL%/favicon.ico”>
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
@@ -28,6 +28,7 @@
   <body>
     <div id="root"></div>
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"></script>
+    <script src="./orslrm.js"></script>
     <!-- <script src="leaflet-routing-machine.js"></script> -->
   </body>
 </html>
