Shows current live location on map

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
     />
     <link rel="stylesheet" href="../src/css/app.css" />
 
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/leaflet.locatecontrol/dist/L.Control.Locate.min.css"
+    />
+
     <title>There And Back</title>
   </head>
   <body>
